--- a/high_roller/Cargo.toml
+++ b/high_roller/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "3.3.3"
+serde = { version = "1.0", features = ["derive"] }
+rand = "0.8.4"
+env_logger = "0.9.0"
+strum_macros = "0.23.1"
