--- a/high_roller/Cargo.toml
+++ b/high_roller/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "3.3.3"
+actix-rt = "2.5.1"
 serde = { version = "1.0", features = ["derive"] }
 rand = "0.8.4"
 env_logger = "0.9.0"
